# omnom

./: Cargo.toml  README.md
examples/: example.rs  mime.rs
src/: buf_read_ext.rs  lib.rs  read_bytes.rs  read_ext.rs  write_bytes.rs  write_ext.rs
tests/: test.rs
