[package]
name = "omnom"
version = "1.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/omnom"
documentation = "https://docs.rs/omnom"
description = "Streaming parser extensions for BufRead"
keywords = ["om", "nom", "omnom", "omnomnom", "omnomnomnom"]
categories = ["parser-implementations"]
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"
edition = "2018"

[dependencies]
memchr = "2.2.1"

[dev-dependencies]
